// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textDecorationSkip renders 0 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip: 0;
  text-decoration-skip: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: 0;
  text-decoration-skip: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: 0;
  text-decoration-skip: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: 0;
  text-decoration-skip: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkip renders function 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip: hasnot;
  text-decoration-skip: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: has;
  text-decoration-skip: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: hasnot;
  text-decoration-skip: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: has;
  text-decoration-skip: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkip renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip: invalid.path.1;
  text-decoration-skip: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: invalid.path.1;
  text-decoration-skip: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: invalid.path.1;
  text-decoration-skip: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: invalid.path.1;
  text-decoration-skip: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkip renders negative number 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip: -54881;
  text-decoration-skip: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: -54881;
  text-decoration-skip: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: -42365;
  text-decoration-skip: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: -42365;
  text-decoration-skip: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkip renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip: July;
  text-decoration-skip: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: August;
    text-decoration-skip: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: September;
    text-decoration-skip: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: November;
    text-decoration-skip: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip: August;
    text-decoration-skip: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: July;
  text-decoration-skip: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: August;
    text-decoration-skip: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: September;
    text-decoration-skip: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: November;
    text-decoration-skip: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip: August;
    text-decoration-skip: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: January;
  text-decoration-skip: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: December;
    text-decoration-skip: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: April;
    text-decoration-skip: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: May;
    text-decoration-skip: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip: June;
    text-decoration-skip: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: January;
  text-decoration-skip: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: December;
    text-decoration-skip: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: April;
    text-decoration-skip: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: May;
    text-decoration-skip: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip: June;
    text-decoration-skip: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkip renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: July;
    text-decoration-skip: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: August;
    text-decoration-skip: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: September;
    text-decoration-skip: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip: November;
    text-decoration-skip: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: July;
    text-decoration-skip: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: August;
    text-decoration-skip: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: September;
    text-decoration-skip: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip: November;
    text-decoration-skip: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: May;
    text-decoration-skip: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: June;
    text-decoration-skip: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: April;
    text-decoration-skip: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip: November;
    text-decoration-skip: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: May;
    text-decoration-skip: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: June;
    text-decoration-skip: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip: April;
    text-decoration-skip: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip: November;
    text-decoration-skip: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkip renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip: July;
  text-decoration-skip: July;
}

@media May {
  .c0 {
    -webkit-text-decoration-skip: August;
    text-decoration-skip: August;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip: September;
    text-decoration-skip: September;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip: November;
    text-decoration-skip: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip: August;
    text-decoration-skip: August;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip: November;
    text-decoration-skip: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: July;
  text-decoration-skip: July;
}

@media May {
  .c0 {
    -webkit-text-decoration-skip: August;
    text-decoration-skip: August;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip: September;
    text-decoration-skip: September;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip: November;
    text-decoration-skip: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip: August;
    text-decoration-skip: August;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip: November;
    text-decoration-skip: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: April;
  text-decoration-skip: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-skip: November;
    text-decoration-skip: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip: January;
    text-decoration-skip: January;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip: December;
    text-decoration-skip: December;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip: April;
    text-decoration-skip: April;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip: May;
    text-decoration-skip: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: April;
  text-decoration-skip: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-skip: November;
    text-decoration-skip: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip: January;
    text-decoration-skip: January;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip: December;
    text-decoration-skip: December;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip: April;
    text-decoration-skip: April;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip: May;
    text-decoration-skip: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkip renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-text-decoration-skip: July;
    text-decoration-skip: July;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip: August;
    text-decoration-skip: August;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip: September;
    text-decoration-skip: September;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip: November;
    text-decoration-skip: November;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip: August;
    text-decoration-skip: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-text-decoration-skip: July;
    text-decoration-skip: July;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip: August;
    text-decoration-skip: August;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip: September;
    text-decoration-skip: September;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip: November;
    text-decoration-skip: November;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip: August;
    text-decoration-skip: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-skip: January;
    text-decoration-skip: January;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip: December;
    text-decoration-skip: December;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip: April;
    text-decoration-skip: April;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip: May;
    text-decoration-skip: May;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip: June;
    text-decoration-skip: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-skip: January;
    text-decoration-skip: January;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip: December;
    text-decoration-skip: December;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip: April;
    text-decoration-skip: April;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip: May;
    text-decoration-skip: May;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip: June;
    text-decoration-skip: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkip renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip: 54881;
  text-decoration-skip: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: 54881;
  text-decoration-skip: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: 42365;
  text-decoration-skip: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: 42365;
  text-decoration-skip: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkip renders string 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip: July;
  text-decoration-skip: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: July;
  text-decoration-skip: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: June;
  text-decoration-skip: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: June;
  text-decoration-skip: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkip renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`textDecorationSkip renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip: DarkSlateBlue;
  text-decoration-skip: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: DarkSlateBlue;
  text-decoration-skip: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: DarkSlateBlue;
  text-decoration-skip: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip: DarkSlateBlue;
  text-decoration-skip: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
